Improve how we track recipe views and consolidate data collection methods
Updates recipe view counts immediately and consistently while using collect method.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 48d37a9e-f2db-47e6-b506-4050d7998f28
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5c663142-396c-4162-b66a-4f109913be33/0e1ad6cb-03d3-444b-811c-8902f3a5ba98.jpg